--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -181,3 +181,30 @@ h3 {
 
   text-transform: uppercase;
 }
+
+/* ------------------------Intro Section----------------------------------- */
+
+.video-section {
+  margin: 0 auto;
+
+  text-align: center;
+}
+
+.video-section .text {
+  margin-top: 30px;
+}
+
+.video {
+  margin-top: 30px;
+
+  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
+}
+
+/* --------------------------Nav Section----------------------------- */
+
+.nav-section {
+  min-height: 991px;
+  margin-top: -200px;
+
+  background-color: var(--main-dark);
+}
