--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -115,21 +115,23 @@ h3 {
   content: "";
 }
 
-.header-wrap {
+.wrap {
   position: relative;
 
   display: flex;
+  gap: 30px;
 }
 
-.header-wrap h1 {
+.wrap h1 {
   position: relative;
   z-index: 1;
+
+  margin-bottom: 200px;
 }
 
-.header-wrap img {
+.wrap .image {
   position: absolute;
-
-  top: -50px;
+  top: -48px;
   right: -277px;
 
   height: 525px;
@@ -141,7 +143,6 @@ h3 {
 
 .text-wrap {
   min-height: 186px;
-  margin-top: 200px;
 
   column-count: 2;
   column-gap: 26px;
@@ -273,13 +274,21 @@ h3 {
 
 /* ----------------------IKEA Effect------------------------------ */
 
-.ikea-effect {
-  position: relative;
+.section:nth-child(2n + 4) {
+  color: var(--white);
 
+  background-color: var(--brown);
+}
+
+.section:nth-child(2n + 3) {
   background-color: var(--light);
 }
 
-.ikea-effect::before {
+.content {
+  position: relative;
+}
+
+.content::before {
   position: absolute;
 
   width: 100%;
@@ -292,17 +301,6 @@ h3 {
   opacity: 0.1;
 
   content: "";
-}
-
-.wrap {
-  display: flex;
-  gap: 30px;
-}
-
-.wrap img {
-  position: relative;
-
-  z-index: 1;
 }
 
 .upper-text {
@@ -335,6 +333,16 @@ h3 {
   background-color: var(--brown);
 }
 
-.ikea-effect .text-wrap {
-  margin-top: 0;
+.section:nth-child(2n + 4) .article-header {
+  color: var(--brown);
+
+  background-color: var(--white);
+}
+
+.section:nth-child(2n + 4) .upper-text {
+  color: var(--opac-white);
+}
+
+.section:nth-child(2n + 4) .wrap {
+  flex-direction: row-reverse;
 }
