--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -107,7 +107,7 @@ h3 {
   width: 100%;
   height: 100%;
 
-  background-image: url("/src/images/background.png");
+  background-image: url("../images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
 
